--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-html5-camera-photo": "^1.5.4",
     "react-otp-input": "^2.3.0",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
